# dracobench

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
docs/: case-schema.md  design.md  difficulty-roadmap.md
reports/: 20260616-115001-moonshotai-kimi-k2-7-code.html  20260616-115001-moonshotai-kimi-k2-7-code.md  20260616-115216-moonshotai-kimi-k2-7-code.html  20260616-115216-moonshotai-kimi-k2-7-code.md  20260616-120841-moonshotai-kimi-k2-7-code.html  20260616-120841-moonshotai-kimi-k2-7-code.md  index.html  v0.2-challenge-moonshotai-kimi-k2-7-code-ability4096-rescored.html  v0.2-challenge-moonshotai-kimi-k2-7-code-ability4096-rescored.md  v0.2-challenge-moonshotai-kimi-k2-7-code-ability4096.html  v0.2-challenge-moonshotai-kimi-k2-7-code-ability4096.md  v0.2-challenge-moonshotai-kimi-k2-7-code-rescored.html  v0.2-challenge-moonshotai-kimi-k2-7-code-rescored.md  v0.2-challenge-moonshotai-kimi-k2-7-code.html  v0.2-challenge-moonshotai-kimi-k2-7-code.md  v0.2-challenge50-deepseek-deepseek-v4-flash-ability16384-rescored.html  v0.2-challenge50-deepseek-deepseek-v4-flash-ability16384-rescored.md  v0.2-challenge50-deepseek-deepseek-v4-flash-ability16384.html  v0.2-challenge50-deepseek-deepseek-v4-flash-ability16384.md  v0.2-challenge50-deepseek-deepseek-v4-pro-ability16384-rescored.html  v0.2-challenge50-deepseek-deepseek-v4-pro-ability16384-rescored.md  v0.2-challenge50-deepseek-deepseek-v4-pro-ability16384.html  v0.2-challenge50-deepseek-deepseek-v4-pro-ability16384.md  v0.2-challenge50-minimax-minimax-m3-ability16384-rescored.html  (+60 more)
(+71 files in other folders)
